[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quaternary-plots"
version = "0.1.0"
description = "A Python library for creating quaternary (tetrahedral) compositional plots"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0"}
authors = [
    {name = "Oliver T. Lord", email = "oliver.lord@bristol.ac.uk"}
]
